# QueryMind

./: LICENSE  README.md  env.toml
01-docs/: Architecture.md  ToDo.md
src-py-worker/: pyproject.toml
src-py-worker/src/pyworker/: __init__.py  cli_args.py  config_models.py  errors.py  run_server.py  server.py
src-server/: Cargo.toml
src-server/src/: cliargs.rs  conf.rs  config.rs  errors.rs  main.rs  server.rs
src-server/src/models/: chat.rs
src-server/src/routes/: chat.rs
src-ui/: index.html  package.json
